# git_issue_classifier

./: .env.example  .gitignore  .renderignore  CLAUDE.md  DEPLOY.md  MILESTONE_2.1_SUMMARY.md  MILESTONE_2.2_SUMMARY.md  MILESTONE_2.3_SUMMARY.md  PHASE1_VERIFICATION.md  PHASE5_IMPLEMENTATION_SUMMARY.md  PHASE_2_COMPLETE.md  README.md  main.py  milestones.md  pyproject.toml  render.yaml
.claude/: settings.local.json
.cursor/commands/: commit.md  implement.md  plan.md
backend/: app.py  routes.py  server.py
classifier/: __init__.py  classifier.py  context_builder.py  llm_client.py  prompt_template.py
explorer/: __init__.py  app.py  routes.py
explorer-ui/: package-lock.json  package.json
explorer-ui/src/: App.tsx
explorer-ui/src/lib/: api.ts  (+1 more)
fetchers/: __init__.py  github.py  gitlab.py
frontend/: README.md  components.json  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.app.json
frontend/src/: index.css
memory/design/: 001_initial_design.md  002_diff_explorer.md  003_onboarding_workflow.md  004_issue_generation.md
memory/milestones/: 000_milestones.md  001_explorer_milestones.md  002_onboarding_workflow_milestones.md  004_issue_generation_milestones.md
models/: __init__.py  config_models.py  data_models.py
setup/: README.md  setup_database.py
storage/: supabase_client.py
tests/: __init__.py  conftest.py  test_classifier.py  test_config.py  test_data_models.py  test_explorer_api.py  test_github_fetcher.py  test_issue_generation.py  test_logger.py  test_supabase_classification.py
utils/: config_loader.py  logger.py
(+19 files in other folders)
